--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,18 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
 
     <application
         android:name=".IptvApp"
         android:allowBackup="true"
         android:banner="@drawable/tv_banner"
+        android:icon="@drawable/ic_myscaner_logo"
+        android:logo="@drawable/ic_myscaner_logo"
+        android:roundIcon="@drawable/ic_myscaner_logo_round"
+        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Material.NoActionBar">
         <provider
